# odin-visa

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
react/app/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
react/app/public/: app.css
react/app/src/: App.tsx  main.tsx
react/app/src/components/: BasicEndpointDropdown.tsx  EndpointSelect.tsx  TitleCard.tsx
react/app/src/lib/: ParamTreeType.ts  bufferPoll.ts  buffersStore.ts  componentWithBundle.tsx  types.ts  useErrorLog.ts  util.ts
react/app/src/pages/k2470/: BufferGraph.tsx  Keithley2470.tsx  TriggersPage.tsx
src/odin_visa/: adapter.py  controller.py  log.py  tree.py  types.py
src/odin_visa/devices/: device.py  device_config.py
src/odin_visa/devices/keithley2470/: device.py  device_config.py  event_log.py  k2470.py  state.py  transport.py  types.py
src/odin_visa/devices/keithley2470/acquisitions/: acquisitions.py  buffers.py  status.py  types.py
src/odin_visa/devices/keithley2470/config/: __init__.py  buffer.py  config.py  savefile.py  sense.py  source.py
src/odin_visa/devices/keithley2470/driver/: __init__.py  _catch_error.py  _driver.py  _query.py  buffer.py  error.py  output.py  sense.py  source.py  trigger_model.py  types.py
src/odin_visa/devices/keithley2470/managers/: __init__.py  acquisition.py  buffer_manager.py  file_writer.py  (+1 more)
src/odin_visa/devices/keithley2470/managers.bak/: __init__.py  buffer_manager.py
src/odin_visa/util/: error.py  instrument.py  scpi_parse.py
test/config/: devices.json  visa_test.cfg
(+39 files in other folders)
