[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "odin-visa"
description = "ODIN VISA device integration"
authors = [
    {name = "Callum Webb", email = "callum.webb@stfc.ac.uk"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8.10",
]
dynamic = ["version"]
requires-python = "~=3.10.0"

dependencies = [
    "pyvisa==1.16.2",
    "pyvisa-py==0.8.1",
    "zeroconf==0.148.0",
    "gpib-ctypes==0.3.0",
    "odin_control==2.0.0",
    "tornado>=6.0",
    "numpy>=2.2",
    "h5py==3.16.0",
    "debugpy>=1.8.20",
    "pandas>=2.3.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/odin_visa/_version.py"

